--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta name="Keywords" content="">
     <meta name="Description" content="">
 
-    <!-- <script src="./scripts/web3.min.js"></script>
-    <script src="./scripts/chat.js"></script> -->
+    <script src="./scripts/web3.min.js"></script>
+    <script src="./scripts/chat.js"></script>
 
   </head>
   <body>
 
     <p>Check the console</p>
 
-    <!-- <button class="enableEthereumButton" onclick="getAccount()">Enable Ethereum</button>
-    <h2>Account: <span class="showAccount"></span></h2> -->
+    <button class="enableEthereumButton" onclick="getAccount()">Enable Ethereum</button>
+    <h2>Account: <span class="showAccount"></span></h2>
 
   </body>
 </html>
