--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p>Check the console</p>
 
     <button class="enableEthereumButton" onclick="getAccount()">Enable Ethereum</button>
-    <h2>Account: <span class="showAccount"></span></h2>
+    <h2>Account: <span id="showAccount"></span></h2>
 
   </body>
 </html>
